--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a class="logo" href="./index.html" lang="en"><span class="logo-web">Web</span>Studio</a>
                 
                 <ul class="list menu">
-                    <li class="menu-item"><a class="link current" href="">Студия</a></li>
+                    <li class="menu-item"><a class="link  current" href="">Студия</a></li>
                     <li class="menu-item"><a class="link" href="./portfolio.html">Портфолио</a></li>
                     <li class="menu-item"><a class="link" href="">Контакты</a></li>
                 </ul>
@@ -74,9 +74,15 @@
             <div class="container">  
             <h2 class="section-title">Чем мы занимаемся</h2>
             <ul class="list about-list">
-                <li class="about-item"><img src="./images/box1.jpg" alt="Программирование" width="370"></li>
-                <li class="about-item"><img src="./images/box2.jpg" alt="Адаптивность" width="370"></li>
-                <li class="about-item"><img src="./images/box3.jpg" alt="Дизайн" width="370"></li>
+                <li class="about-item"><img src="./images/box1.jpg" alt="Программирование" width="370">
+                <p class="label">десктопные приложения</p>
+                </li>
+                <li class="about-item"><img src="./images/box2.jpg" alt="Адаптивность" width="370">
+                <p class="label">мобильные приложения</p>
+                </li>
+                <li class="about-item"><img src="./images/box3.jpg" alt="Дизайн" width="370">
+                <p class="label">дизайнерские решения</p>
+                </li>
             </ul>
         </div>
         </section>
@@ -303,8 +309,8 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-        <button class="btn-close" data-modal-close>
-            <svg class="close-modal" type="button" width="11px" height="11px">
+        <button class="btn-close" type="button" data-modal-close>
+            <svg width="11px" height="11px">
                 <use href="./images/sprite.svg#icon-close-modal"></use>
             </svg>
         </button>
