--- a/portfolio.html
+++ b/portfolio.html
@@ -51,65 +51,117 @@
             </ul>
     
             <ul class="list project-list">
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/1.jpg" alt="Сайт на ноутбуке" width="370">
-                        <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank" rel="noopener noreferrer">
+                            <div class="overlay">
+                                <img src="./images/portfolio/1.jpg" alt="Сайт на ноутбуке" width="370">
+                                <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                                <div class="card-content">
                             <h2 class="project-name">Технокряк</h2>
                         <p class="filter-name">Веб-сайт</p>
                         </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/2.jpg" alt="Баскетболисты в прыжке" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/2.jpg" alt="Баскетболисты в прыжке" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                            <div class="card-content">
                         <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                     <p class="filter-name">Дизайн</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/3.jpg" alt="Логотип ресторана" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/3.jpg" alt="Логотип ресторана" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
+                        <div class="card-content">
                         <h2 class="project-name">Ресторан Seafood</h2>
                     <p class="filter-name">Приложение</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/4.jpg" alt="Наушники" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/4.jpg" alt="Наушники" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="card-content">
                         <h2 class="project-name">Проект Prime</h2>
                     <p class="filter-name">Маркетинг</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/5.jpg" alt="Две коробки" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/5.jpg" alt="Две коробки" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="card-content">
                         <h2 class="project-name">Проект Boxes</h2>
                     <p class="filter-name">Приложение</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/6.jpg" alt="Сайт на мониторе" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/6.jpg" alt="Сайт на мониторе" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="card-content">
                         <h2 class="project-name">Inspiration has no Borders</h2>
                     <p class="filter-name">Веб-сайт</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/7.jpg" alt="Открытая книга" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/7.jpg" alt="Открытая книга" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="card-content">
                         <h2 class="project-name">Издание Limited Edition</h2>
                     <p class="filter-name">Веб-сайт</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/8.jpg" alt="Ярлык для одежды" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/8.jpg" alt="Ярлык для одежды" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="card-content">
                         <h2 class="project-name">Проект LAB</h2>
                     <p class="filter-name">Маркетинг</p>
                     </div>
                     </a></li>
-                <li class="item project-item"><a class="link project-link" href=""target="_blank"
-                            rel="noopener noreferrer"><img src="./images/portfolio/9.jpg" alt="Работа на ноутбуке" width="370">
-                    <div class="card-content">
+                <li class="item project-item"><a class="link project-link" href="" target="_blank"
+                            rel="noopener noreferrer">
+                            <div class="overlay">
+                            <img src="./images/portfolio/9.jpg" alt="Работа на ноутбуке" width="370">
+                            <p class="overlay-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="card-content">
                         <h2 class="project-name">Growing Business</h2>
                     <p class="filter-name">Приложение</p>
                     </div>
